# python-project-lvl1

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: README.md  hexlet-check.yml
brain_games/: cli.py  even.py  game.py
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
